--- a/flutter/ios/Runner/Info.plist
+++ b/flutter/ios/Runner/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
-    <string>RustDesk</string>
+    <string>YunDesk</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -15,7 +15,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
 	<key>CFBundleName</key>
-	<string>RustDesk</string>
+	<string>YunDesk</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -32,10 +32,10 @@
 			<key>CFBundleURLIconFile</key>
 			<string></string>
 			<key>CFBundleURLName</key>
-			<string>com.carriez.RustDesk</string>
+			<string>com.carriez.YunDesk</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>RustDesk</string>
+				<string>YunDesk</string>
 			</array>
 		</dict>
 	</array>
