--- a/flutter/macos/Runner/Info.plist
+++ b/flutter/macos/Runner/Info.plist
@@ -26,10 +26,10 @@
 			<key>CFBundleURLIconFile</key>
 			<string></string>
 			<key>CFBundleURLName</key>
-			<string>com.carriez.RustDesk</string>
+			<string>com.carriez.YunDesk</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>RustDesk</string>
+				<string>YunDesk</string>
 			</array>
 		</dict>
 	</array>
