--- a/.github/workflows/playground.yml
+++ b/.github/workflows/playground.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  RUST_VERSION: "1.75" # https://github.com/RustDesk/RustDesk/discussions/7503
+  RUST_VERSION: "stable"
   CARGO_NDK_VERSION: "3.1.2"
   LLVM_VERSION: "15.0.6"
   FLUTTER_VERSION: "3.22.2"
